Add Makecode to programming menu.

--- a/rules/puavomenu/templates/menudata/50-default.yml
+++ b/rules/puavomenu/templates/menudata/50-default.yml
@@ -470,7 +470,14 @@ programs:
         name: Mafynetti
         tags: default, education
         puavopkg:
-            id: mafynetti
+        id: mafynetti
+  - makecode:
+        type: web
+        name: Makecode (Web)
+        url:  https://makecode.mindstorms.com/
+        description: Makecode -ohjelmointi
+        icon: /usr/share/icons/Faenza/mimetypes/96/text-html.png
+        tags: default, internet, education
   - mandelbulber:
         tags: default, education, science
   - marble-qt:
@@ -801,7 +808,7 @@ programs:
         tags: default
   - scratch3:
         type: web
-        name: Scratch 3.0 (web)
+        name: Scratch 3.0 (Web)
         url: https://scratch.mit.edu/projects/editor/
         icon: /usr/share/icons/hicolor/128x128/apps/scratch.png
         tags: default, education
@@ -1215,6 +1222,7 @@ menus:
             - teddybear
             - drracket
             - enchanting
+            - makecode
             - bluegriffon
             - eclipse
             - eric
@@ -1456,6 +1464,7 @@ menus:
             - ylearkisto
             - sumopaint
             - mathdemo-abitti
+            - makecode
             - walma
             - pahvi
             - kahoot
