Support Wayland as an alternative to Xorg for puavo desktop sessions.
Set "puavo.graphics.display_server" to "wayland" to test
this (default is still "xorg" of course).  Many things
are currently broken with Wayland (in puavo-os, not
commenting generally): puavomenu placement, stuff in
/etc/X11/Xsession.d does not get setup leading to some
missing functionality, display configuration management
does not work, we have not tested how the remote access
stuff should work, probably many others.  It is unlikely
we are going to move to this by default in Buster cycle,
but it should be possible to at least experiment with this.
Especially we are interested to see if some UI hangs in
Gnome regarding mouse focus and functionality work better
on the Wayland side.

--- a/parts/ltsp/client/Makefile
+++ b/parts/ltsp/client/Makefile
@@ -41,7 +41,7 @@ installdirs :
 	mkdir -p $(DESTDIR)$(datarootdir)/pam-configs
 	mkdir -p $(DESTDIR)$(datarootdir)/puavo-conf/definitions
 	mkdir -p $(DESTDIR)$(datarootdir)/puavo-conf/profile-overwrites
-	mkdir -p $(DESTDIR)$(datarootdir)/puavo-ltsp-client/xsessions
+	mkdir -p $(DESTDIR)$(datarootdir)/wayland-sessions
 	mkdir -p $(DESTDIR)$(datarootdir)/xsessions
 	mkdir -p $(DESTDIR)/var/lib/puavo-desktop/shared
 	mkdir -p $(DESTDIR)/var/lib/puavo-desktop/users
@@ -49,6 +49,9 @@ installdirs :
 
 .PHONY : install
 install : installdirs
+	$(INSTALL_DATA) -t $(DESTDIR)$(datarootdir)/gdm/greeter/autostart \
+		gdm/greeter/autostart/puavo-run-xrandr.desktop
+
 	$(INSTALL_DATA) -t $(DESTDIR)$(datarootdir)/pam-configs \
 		pam/configs/puavo-local-access
 
@@ -58,11 +61,8 @@ install : installdirs
 	$(INSTALL_DATA) -t $(DESTDIR)$(datarootdir)/puavo-conf/profile-overwrites \
 		profile-overwrites/*.json
 
-	$(INSTALL_DATA) -t $(DESTDIR)$(datarootdir)/gdm/greeter/autostart \
-		gdm/greeter/autostart/puavo-run-xrandr.desktop
-
-	$(INSTALL_DATA) -t $(DESTDIR)$(datarootdir)/puavo-ltsp-client/xsessions \
-		xsessions/*
+	$(INSTALL_DATA) -t $(DESTDIR)$(datarootdir)/wayland-sessions \
+		wayland-sessions/*
 
 	$(INSTALL_DATA) -t $(DESTDIR)$(datarootdir)/xsessions \
 		xsessions/*
