--- a/parts/ltsp/client/xsessions/puavo-desktop.desktop
+++ b/parts/ltsp/client/xsessions/puavo-desktop.desktop
@@ -1,7 +1,7 @@
 [Desktop Entry]
 Name=Puavo Desktop
 Comment=
-Exec=/usr/lib/puavo-ltsp-client/desktop-session
-TryExec=/usr/lib/puavo-ltsp-client/desktop-session
+Exec=/usr/lib/puavo-ltsp-client/desktop-session xorg
+TryExec=/usr/lib/puavo-ltsp-client/desktop-session xorg
 Icon=
 Type=Application
