Update Puavomenu to Buster era
Major changes:

- Only JSON menudata is supported now. YAML is slow to load and has ten different ways
  to say one thing and I really need just that one way. Downside is, we lose comments.

- Improved puavo-pkg program support. The built-in search can now find installers too,
  for example.

- Support for user-defined programs. If you place .desktop files in ~/.local/share/applications,
  a new category will be added to the menu. The contents of this category is live-updated.
  New files added to the directory will instantly appear in the menu, and disappear too if
  the file is removed. Modifications are also applied instantly. A small program written in C
  is launched in the background to track the contents of the user directory with inotify.

- Tag filtering is now actually used. The functionality existed in the Stretch version, but
  it wasn't used because it would have broken too many things. Since the version Buster is
  still in development, things can break without problems.

- The program is now themeable with CSS. It uses GNOME's own methods for drawing backgrounds,
  foregrounds and borders, which means almost everything can be styled. The main window is
  now also slightly transparent. This also means lots of removed code, as GNOME will do the
  drawing for us, no need to manually draw everything with the Cairo library.
  (Some parts cannot be styled yet, but this will be fixed in the future.)

- Large-scale code refactoring and cleanup has been done. Larger files have been split into
  smaller chunks, grouped by functionality and placed in subdirectories.

- The icon cache no longer has a fixed size. You can just keep throwing more and more icons
  at it and it'll store them all for you. A stress test was conducted by inserting all icons
  in /usr/share/icons into 3072x3072 atlas images. It stored 36049 icons in 9 atlases without
  any problems.

- I don't even remember all the changes. I wanted to call this PuavoMenu v2

--- a/parts/puavomenu/Makefile
+++ b/parts/puavomenu/Makefile
@@ -1,17 +1,30 @@
-build:
+CC=gcc
+CFLAGS=-s -O2 -Wall -Wextra -pedantic -std=c99
 
+.PHONY: all
+all: monitor-userprogs
+
+monitor-userprogs: monitor-userprogs.c
+
+.PHONY: build
+build: monitor-userprogs
+
+.PHONY: clean
 clean:
+	rm -rf monitor-userprogs
 
+.PHONY: install-dirs
 install-dirs:
 	mkdir -p $(DESTDIR)/etc/puavomenu
 	mkdir -p $(DESTDIR)/etc/xdg/autostart
 	mkdir -p $(DESTDIR)/opt/puavomenu
 
+.PHONY: install
 install: install-dirs
 	cp -R * $(DESTDIR)/opt/puavomenu/
-	install -o root -g root -m 644 -t $(DESTDIR)/etc/xdg/autostart \
-		puavomenu.desktop
+	install -o root -g root -m 644 -t $(DESTDIR)/etc/xdg/autostart puavomenu.desktop
 
+.PHONY: uninstall
 uninstall:
 	rm -f $(DESTDIR)/etc/puavomenu
 	rm -f $(DESTDIR)/opt/puavomenu
