Determine with a script on whether we should or not should do a local login on gdm.  We do remote login on: always on the login screen, and also in case the kerberos ticket a user already has is over three days old.

--- a/parts/ltsp/client/Makefile
+++ b/parts/ltsp/client/Makefile
@@ -108,6 +108,7 @@ install : installdirs
 
 	$(INSTALL_PROGRAM) -t $(DESTDIR)$(libdir)/puavo-ltsp-client/pam \
 		pam/check-if-account-is-locked \
+		pam/puavo-can-do-local-login \
 		pam/puavo-login \
 		pam/puavo-manage-homedir \
 		pam/puavo-nodm-pam-setup \
