Correct file ownership of shorewall log files under /state.
Tweak some other shorewall related rules accordingly.

--- a/rules/bootserver_firewall/files/ulogd.conf
+++ b/rules/bootserver_firewall/files/ulogd.conf
@@ -183,7 +183,7 @@ nlgroup=1
 socket_path="/tmp/nuauth_ulogd2.sock"
 
 [emu1]
-file="/var/log/shorewall.log"
+file="/var/log/ulog/shorewall.log"
 sync=1
 
 [op1]
