Do not use ntpdate anymore, it is deprecated.  Do a similar trick with sntp when vpn comes up.  Closes #556.

--- a/debs/puavo-os/debian/control
+++ b/debs/puavo-os/debian/control
@@ -316,7 +316,6 @@ Depends: ${misc:Depends},
  nfs-common,
  nslcd,
  ntp,
- ntpdate,
  perl,
  puavo-client,
  puavo-conf,
@@ -335,6 +334,7 @@ Depends: ${misc:Depends},
  ruby-trollop,
  ruby-uuidtools,
  ruby,
+ sntp,
  xautolock,
  xserver-xorg-core
 Suggests: webkiosk-language-selector
