--- a/parts/conf/Makefile
+++ b/parts/conf/Makefile
@@ -62,13 +62,13 @@ test: all
 	$(MAKE) -C test
 
 puavo-conf: puavo-conf.o libpuavoconf.la
-	libtool --mode=link gcc $(LDFLAGS) -o $@ $^
+	libtool --mode=link --tag=CC $(CC) $(LDFLAGS) -o $@ $^
 
 puavo-conf-update: puavo-conf-update.o libpuavoconf.la
-	libtool --mode=link gcc $(LDFLAGS) -ljansson -o $@ $^
+	libtool --mode=link --tag=CC $(CC) $(LDFLAGS) -ljansson -o $@ $^
 
 puavo-template: puavo-template.o libpuavoconf.la
-	libtool --mode=link gcc $(LDFLAGS) -ldb \
+	libtool --mode=link --tag=CC $(CC) $(LDFLAGS) -ldb \
                 $(shell pkg-config --libs gio-unix-2.0 glib-2.0) -lctpl -o $@ $^
 
 puavo-template.o: puavo-template.c
@@ -76,12 +76,12 @@ puavo-template.o: puavo-template.c
                 $(shell pkg-config --cflags gio-unix-2.0 glib-2.0) $^
 
 libpuavoconf.la: conf.lo common.lo db.lo dbus.lo
-	libtool --mode=link \
-		gcc $(LDFLAGS) -ldb $(shell pkg-config --libs dbus-1) -rpath $(libdir) -version-info 0:0:0 -o $@ $^
+	libtool --mode=link --tag=CC \
+		$(CC) $(LDFLAGS) -ldb $(shell pkg-config --libs dbus-1) -rpath $(libdir) -version-info 0:0:0 -o $@ $^
 
 %.lo: %.c %.h
-	libtool --mode=compile \
-		gcc $(CPPFLAGS) $(CFLAGS) $(shell pkg-config --cflags dbus-1) -c $<
+	libtool --mode=compile --tag=CC \
+		$(CC) $(CPPFLAGS) $(CFLAGS) $(shell pkg-config --cflags dbus-1) -c $<
 
 deb:
 	dpkg-buildpackage -us -uc
