Add some firmware files from ubuntu-firmware so that we can get more functional HP Probook 440 G7 on Buster.

--- a/parts/pkg/packages/Makefile
+++ b/parts/pkg/packages/Makefile
@@ -65,6 +65,7 @@ packagedirs += teamviewer
 packagedirs += tela-icon-theme
 packagedirs += tilitin
 packagedirs += t-lasku
+packagedirs += ubuntu-firmware
 packagedirs += ubuntu-wallpapers
 packagedirs += unityhub-appimage
 packagedirs += vagrant
