Add a few dependencies to OpenBoard so that it builds.

--- a/debs/openboard/debian/control
+++ b/debs/openboard/debian/control
@@ -3,11 +3,13 @@ Section: education
 Priority: extra
 Maintainer: Puavo Org <dev@opinsys.fi>
 Build-Depends: debhelper (>= 8),
+ libasound2-dev,
  libass-dev,
  libavcodec-dev,
  libavformat-dev,
  libbz2-dev,
  libfdk-aac-dev,
+ liblzma-dev,
  libmp3lame-dev,
  libogg-dev,
  libopus-dev,
@@ -16,6 +18,7 @@ Build-Depends: debhelper (>= 8),
  libqt5svg5-dev,
  libqt5webkit5-dev,
  libqt5xmlpatterns5-dev,
+ libsdl1.2-dev,
  libssl-dev,
  libswscale-dev,
  libtheora-dev,
@@ -39,11 +42,13 @@ Homepage: https://github.com/puavo-org/OpenBoard/
 Package: openboard
 Architecture: all
 Depends: libc6,
+ libasound2,
  libavcodec58,
  libavformat58,
  libfdk-aac1,
  libgcc1,
  libgomp1,
+ liblzma5,
  libqt5core5a,
  libqt5gui5,
  libqt5multimedia5,
@@ -56,6 +61,7 @@ Depends: libc6,
  libqt5webkit5,
  libqt5widgets5,
  libqt5xml5,
+ libsdl1.2debian,
  libssl1.1,
  libstdc++6,
  libswscale5,
