Support --secure-delete in puavo-reset-laptop-to-factory-defaults.

--- a/debs/puavo-os/debian/control
+++ b/debs/puavo-os/debian/control
@@ -363,6 +363,7 @@ Depends: ${misc:Depends},
  rdiff,
  ruby-dbus,
  ruby-highline,
+ secure-delete,
  wget
 Description: Bits and pieces needed inside the LTSP chroot image.
  Bits and pieces needed inside the LTSP chroot image.
