In puavo-update-acl, accept ldap suffix as an argument instead of an organisation.
Guessing that ldap suffix ends with ",dc=fi" is no longer valid.

Some other, mostly stylistic fixes, as well.

--- a/cloud/puavo-ds/master/Makefile
+++ b/cloud/puavo-ds/master/Makefile
@@ -1,5 +1,6 @@
 prefix = /usr/local
 exec_prefix = $(prefix)
+bindir = $(exec_prefix)/bin
 sbindir = $(exec_prefix)/sbin
 
 # For some reason ruby lib directory is different under /usr and /usr/local
@@ -13,6 +14,7 @@ build:
 
 install-dirs:
 	mkdir -p $(DESTDIR)$(RUBY_LIB_DIR)
+	mkdir -p $(DESTDIR)$(bindir)
 	mkdir -p $(DESTDIR)$(sbindir)
 	mkdir -p $(DESTDIR)/etc/ldap/schema/
 	mkdir -p $(DESTDIR)/etc/init.d/
@@ -20,14 +22,18 @@ install-dirs:
 install: install-dirs
 	cp -r lib/* $(DESTDIR)$(RUBY_LIB_DIR)
 	cp schema/*.ldif $(DESTDIR)/etc/ldap/schema/
-	install -m 744 -t $(DESTDIR)$(sbindir) bin/puavo-add-new-organisation
-	install -m 744 -t $(DESTDIR)$(sbindir) bin/puavo-clone-master
-	install -m 744 -t $(DESTDIR)$(sbindir) bin/puavo-reset-kerberos-configurations
-	install -m 744 -t $(DESTDIR)$(sbindir) bin/puavo-init-ldap
-	install -m 744 -t $(DESTDIR)$(sbindir) bin/puavo-print-acls
-	install -m 744 -t $(DESTDIR)$(sbindir) bin/puavo-update-acl
-	install -m 744 -t $(DESTDIR)$(sbindir) bin/puavo-dump-all-databases
-	install -m 744 -t $(DESTDIR)$(sbindir) bin/puavo-restore-all-databases
+
+	install -m 755 -t $(DESTDIR)$(bindir) bin/puavo-print-acls
+	install -m 755 -t $(DESTDIR)$(bindir) bin/puavo-update-acl
+
+	install -m 744 -t $(DESTDIR)$(sbindir) \
+		bin/puavo-add-new-organisation \
+		bin/puavo-clone-master \
+		bin/puavo-dump-all-databases \
+		bin/puavo-init-ldap \
+		bin/puavo-reset-kerberos-configurations \
+		bin/puavo-restore-all-databases
+
 	install -m 744 -t $(DESTDIR)/etc/init.d init/puavo-kadmind
 
 clean:
