--- a/cloud/puavo-ds/debian/control
+++ b/cloud/puavo-ds/debian/control
@@ -33,7 +33,8 @@ Depends: ${misc:Depends},
  ruby-activeldap,
  ruby-builder,
  slapd,
- slapd-smbkrb5pwd
+ slapd-smbkrb5pwd,
+ tcl
 Recommends: rng-tools
 Description: Puavo LDAP setup tool
  Builds LDAP for Puavo
