--- a/cloud/puavo-ds/debian/control
+++ b/cloud/puavo-ds/debian/control
@@ -32,7 +32,8 @@ Depends: ${misc:Depends},
  ruby,
  ruby-activeldap,
  slapd,
- slapd-smbkrb5pwd
+ slapd-smbkrb5pwd,
+ tcl
 Recommends: rng-tools
 Description: Puavo LDAP setup tool
  Builds LDAP for Puavo
