Add "puavo-bios-config" script, hook it into Puavo OS Console, and make it possible to use HP BIOS setup utilities through it.

--- a/parts/ltsp/puavo-install/Makefile
+++ b/parts/ltsp/puavo-install/Makefile
@@ -30,6 +30,7 @@ installdirs :
 .PHONY : install
 install : installdirs
 	$(INSTALL_PROGRAM) -t $(DESTDIR)$(sbindir) \
+		puavo-bios-config \
 		puavo-client-daemon \
 		puavo-disk-clone \
 		puavo-install \
