Fix automatic off/on cycle of digital signature screens.
This obeys the daytime hours set in Puavo, thus the time
is configurable.

Oddly enough, this has been broken since the Ubuntu Trusty
--> Debian Stretch transition, and I heard about this only
last week.  Maybe folks do not run around much in school
corridors at night... Anyway, now we save electricity and
also the WORLD!

--- a/parts/ltsp/client/Makefile
+++ b/parts/ltsp/client/Makefile
@@ -71,7 +71,8 @@ install : installdirs
 		puavo-pulseaudio-get-puavoconf \
 		puavo-pulseaudio-list \
 		puavo-pulseaudio-setup \
-		puavo-rest-request
+		puavo-rest-request \
+		puavo-tv-display
 
 	$(INSTALL_PROGRAM) -t $(DESTDIR)$(sbindir) \
 		puavo-conf-local \
