Change puavo-generate-gsm-config-for-nm.service type to simple so that multi-user.target does not wait for it.

--- a/rules/network_manager/files/puavo-generate-gsm-config-for-nm.service
+++ b/rules/network_manager/files/puavo-generate-gsm-config-for-nm.service
@@ -3,7 +3,7 @@ Description=Create configurations for gsm settings in NetworkManager
 After=ModemManager.service NetworkManager.service
 
 [Service]
-Type=oneshot
+Type=simple
 ExecStart=/usr/local/lib/puavo-generate-gsm-config-for-nm
 
 [Install]
