Add "puavo-os" to the list of packages to be built for "cloud".
This is because "puavo-client" is dependency of "puavo-ca-rails".

--- a/debs/Makefile
+++ b/debs/Makefile
@@ -22,7 +22,7 @@ _pkgs_ports := fmit                 \
                vtun                 \
                wsmancli
 _pkgs_image     := $(_pkgs_builddeps) $(_pkgs_parts) $(_pkgs_ports)
-_pkgs_cloud     := krb5 openldap puavo-ds
+_pkgs_cloud     := krb5 openldap puavo-ds puavo-os
 
 _dpkg_buildpackage_builddeps := $(_pkgs_builddeps:%=.dpkg-buildpackage-%)
 _dpkg_buildpackage_cloud     := $(_pkgs_cloud:%=.dpkg-buildpackage-%)
