--- a/debs/puavo-os/debian/control
+++ b/debs/puavo-os/debian/control
@@ -275,6 +275,7 @@ Depends: ${misc:Depends},
  qemu-kvm,
  rdiff,
  rsyslog-relp,
+ ruby-addressable,
  ruby-dnsruby,
  ruby-highline,
  ruby-ipaddress,
