--- a/rules/bootserver_krb5kdc/files/krb5-kdc_override.conf
+++ b/rules/bootserver_krb5kdc/files/krb5-kdc_override.conf
@@ -4,3 +4,6 @@ After=slapd.service
 [Service]
 # slapd may not be properly up immediately... so wait a bit.
 ExecStartPre=/usr/local/lib/puavo-service-wait-for-slapd
+# also start up after a while in case of failure
+Restart=always
+RestartSec=30
