Puavo OS Console now uses "upower", add a dependency.

--- a/debs/puavo-os/debian/control
+++ b/debs/puavo-os/debian/control
@@ -336,6 +336,7 @@ Depends: ${misc:Depends},
  ruby-uuidtools,
  ruby,
  sntp,
+ upower,
  xautolock,
  xserver-xorg-core
 Suggests: webkiosk-language-selector
