Update puavo-pkg packages once every hour.
Randomize the minute on cron so that all hosts updating it
do not try it on the same minute.

--- a/debs/puavo-os/debian/control
+++ b/debs/puavo-os/debian/control
@@ -126,6 +126,7 @@ Description: Puavo configuration
 Package: puavo-core
 Architecture: all
 Depends: ${misc:Depends},
+ coreutils,
  initramfs-tools,
  mawk,
  puavo-conf,
