puavomenu: Goodbye, monitor-userprogs
It was a neat idea, and watching the menu contents update live
when the directory was modified was really cool, but as stated
in the previous commit, inotify isn't reliable and easy to use
with recursive monitoring, so we'll just brute-force it inside
Puavomenu.

--- a/parts/puavomenu/Makefile
+++ b/parts/puavomenu/Makefile
@@ -1,17 +1,8 @@
-CC=gcc
-CFLAGS=-s -O2 -Wall -Wextra -pedantic -std=c99
-
-.PHONY: all
-all: monitor-userprogs
-
-monitor-userprogs: monitor-userprogs.c
-
 .PHONY: build
-build: monitor-userprogs
+build:
 
 .PHONY: clean
 clean:
-	rm -rf monitor-userprogs
 
 .PHONY: install-dirs
 install-dirs:
