--- a/debs/puavo-os/debian/control
+++ b/debs/puavo-os/debian/control
@@ -346,6 +346,7 @@ Description: Bits and pieces needed inside the LTSP chroot image.
 Package: puavo-ltsp-install
 Architecture: all
 Depends: ${misc:Depends},
+ aria2,
  clonezilla,
  curl,
  dmidecode,
