When bittorrent download completes, let aria2c keep seeding, but close the client connection (with success).
Also, exit in case of unexpected errors in server loop.

--- a/parts/ltsp/puavo-install/Makefile
+++ b/parts/ltsp/puavo-install/Makefile
@@ -52,6 +52,7 @@ install : installdirs
 		lib/ls-old-images-and-rdiffs \
 		lib/puavo-image-preinst \
 		lib/puavo-torrent-updated \
+		lib/puavo-torrent-download-complete \
 		lib/update-configuration \
 		lib/update-images \
 		lib/update-ltspimage-update-stats
