--- a/parts/ltsp/puavo-install/systemd/puavo-torrent-updated.service
+++ b/parts/ltsp/puavo-install/systemd/puavo-torrent-updated.service
@@ -3,7 +3,7 @@ Description=Puavo Torrent Update Daemon
 Requires=puavo-torrent-updated.socket
 
 [Service]
-ExecStart=/usr/lib/puavo-ltsp-install/puavo-torrent-updated
+ExecStart=/usr/lib/puavo-ltsp-install/puavo-torrent-updated /images/rdiffs
 Type=simple
 User=puavo-update
 Group=puavo-update
