Add "sudo" to puavo-ltsp-install dependencies.
Perhaps may seem pointless, but I want to document this.

--- a/debs/puavo-os/debian/control
+++ b/debs/puavo-os/debian/control
@@ -369,6 +369,7 @@ Depends: ${misc:Depends},
  ruby-dbus,
  ruby-highline,
  secure-delete,
+ sudo,
  wget
 Description: Bits and pieces needed inside the LTSP chroot image.
  Bits and pieces needed inside the LTSP chroot image.
