Make "Windows" boot label in Grub configurable through the puavo-conf "puavo.grub.config"-mechanism.

--- a/rules/grub/files/default.cfg
+++ b/rules/grub/files/default.cfg
@@ -39,3 +39,5 @@ else
   set text_other_system_normal_startup="Other system, normal startup"
   set text_other_system_developer_mode="Other system, developer mode"
 fi
+
+set windows_boot_label="Windows"
